# game-design

./: README.md  first_fight.txt
attack-editor/: Cargo.toml
attack-editor/src/: main.rs
client-web/: Cargo.toml  build_wasm.sh  opt.sh  release_build.sh
client-web/src/: attack.rs  boss.rs  dom_helpers.rs  hero.rs  lib.rs  scene.rs  stage.rs
data/attack/: attack_1.json  attack_10.json  attack_2.json  attack_3.json  attack_4.json  attack_5.json  attack_6.json  attack_7.json  attack_8.json  attack_9.json  list.json
data/character/: character_1.json
data/level/: level_1.json  level_2.json  list.json
data/npc/: list.json  npc_1.json  npc_2.json
data/resource/: list.json
docs/: README_EN.md  README_RU.md  SERVER_EN.md  SERVER_RU.md
editor/: Cargo.toml
editor/src/: attack.rs  attack_list.rs  common.rs  main.rs  npc.rs  utils.rs
editor/src/attack/: item.rs  list.rs  mod.rs
editor/src/character/: mod.rs
editor/src/level/: item.rs  list.rs  mod.rs
editor/src/npc/: item.rs  list.rs  mod.rs
editor/src/resource/: item.rs  list.rs  mod.rs
first-fight/: Cargo.toml
first-fight/src/: attack.rs  boss.rs  hero.rs  main.rs  scene.rs  ui_app.rs  ws.rs
game-core/: Cargo.toml
game-core/src/: boss.rs  hero.rs  lib.rs  scene.rs  server.rs
network/: Cargo.toml
network/src/: client.rs
network/src/server/: boss.rs  hero.rs  mod.rs
server/: Cargo.toml  release_build.sh
server/src/: boss.rs  broadcaster.rs  config.rs  game_loop.rs  hero.rs  main.rs  moves.rs  npc.rs  stage.rs  types.rs
shared/: Cargo.toml
shared/src/: action.rs  attack.rs  character.rs  client.rs  hero.rs  level.rs  lib.rs  list.rs  npc.rs  position.rs  projectile.rs  resource.rs  server.rs  types.rs
shared/src/effect/: area.rs  mod.rs
