[package]
name = "attack-editor"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.iced]
version = "0.12.1"
features = ["advanced", "tokio"]

[dependencies.tokio]
version = "1.44"
features = ["macros", "rt-multi-thread"]

[dependencies.shared]
path = "../shared"
