[package]
name = "client-web"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
bytes = "1.10"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "=0.3.77" # keep version fixed
nalgebra = { version = "0.33", features = ["serde-serialize"] }
wasm-bindgen = "=0.2.100" # keep version fixed

[dependencies.web-sys]
version = "=0.3.77" # keep version fixed
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "Node",
    "MouseEvent",
    "Window",
]

[dependencies.game-core]
path = "../game-core"

[dependencies.network]
path = "../network"

[dependencies.shared]
path = "../shared"
