[package]
name = "editor"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
rev = "9d56b48"
# version = "0.13"
default-features = false
features = ["advanced", "tokio", "wgpu"]

[dependencies.iced_widget]
git = "https://github.com/iced-rs/iced"
rev = "9d56b48"
# version = "0.13"

[dependencies.iced_winit]
git = "https://github.com/iced-rs/iced"
rev = "9d56b48"
# version = "0.13"

[dependencies.tokio]
version = "1.44"
features = ["rt-multi-thread"]

[dependencies.shared]
path = "../shared"
