[package]
name = "first-fight"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
# iced = { version = "0.12", features = ["canvas", "tokio"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# game input library for rust
#gilrs = "0.11"

[dependencies.tokio]
version = "1.44"
features = ["macros", "sync", "time", "rt-multi-thread"]

[dependencies.game-core]
path = "../game-core"

[dependencies.network]
path = "../network"

[dependencies.shared]
path = "../shared"

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced"
rev = "283d0e7"
# path = "../../iced/core"

[dependencies.iced_widget]
git = "https://github.com/iced-rs/iced"
rev = "283d0e7"
# path = "../../iced/widget"
features = ["wgpu", "canvas"]

[dependencies.iced_winit]
git = "https://github.com/iced-rs/iced"
rev = "283d0e7"
# path = "../../iced/winit"

[dependencies.iced_wgpu]
git = "https://github.com/iced-rs/iced"
rev = "283d0e7"
# path = "../../iced/wgpu"
