[package]
name = "game-core"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[dependencies]
nalgebra = "0.33"
rand = { version = "0.9", features = ["thread_rng"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.network]
path = "../network"

[dependencies.shared]
path = "../shared"
