[package]
name = "server"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3"
nalgebra = "0.33"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["auth", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4"] }

[dependencies.tokio]
version = "1.44"
features = ["macros", "rt-multi-thread", "sync", "time"]

[dependencies.shared]
path = "../shared"
